Fixed nav mobile spacing

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -41,7 +41,7 @@
     .side-nav {
         position: fixed;
         width: 100%;
-        margin-top: 3.65em;
+        margin-top: 3.55em;
         height: inherit;
     }
 
